# phd-thesis-animations

./: .env.example  .gitignore  ASSET_RIGHTS.md  LICENSE  PUBLICATION_REVIEW.md  README.md  TODOS.md  intro_diffusion_explainer.py  intro_slides_content_plan.md  manim.cfg  notes_todos.md  pyproject.toml  refresh_presentation.sh  render_01_intro.sh  render_02_methods.sh  render_03_study1.sh  render_04_study2.sh  render_05_conclusion.sh  render_06_supplementary.sh  render_all.sh  render_single_video.sh  render_study1.sh  render_study2.sh
assets/: README.md  presentation_deck.toml  presentation_frame_overrides.toml  presenter_notes.md
scenes/: clips.py  conclusion.py  intro.py  intro_diffusion_explainer.py  intro_representation_test.py  methods.py  study1.py  study1_stage2_psychophysical.py  study1_stage3_memory.py  study1_step1.py  study1_step2.py  study1_step2_showcase.py  study1_step3.py  study1_step4.py  study1_step5.py  study1_stimulus_setshowcase.py  study2.py  study2_decoding.py  study2_design.py  study2_searchlight.py  supplementary.py  test_svg.py  utils.py  v1v2v3_viewing.py
scripts/: build_static_rescue_deck.py  create_keynote_presentation.applescript  export_frame_screener_pdf.py  export_last_frames_pdf.py  force_keynote_cmu_font.py  generate_classifier_schematics.py  generate_intro_native_specs.py  package_emergency_bundle.py  presentation_hybrid_deck.py  presentation_manifest.py  presentation_preflight.py  renumber_scene_order.py  report_video_durations.py  sync_external_assets.py  test_svg.py  utils.py  v1v2v3_viewing.py
tests/: test_render_cli.py  (+4 more)
(+53 files in other folders)
